--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div>
         <p><span class="hint">Disclaimer: All images and texts used in this website are from this <a href="https://honor-of-kings.fandom.com/wiki/Honor_of_Kings_Wiki" target="_blank">wiki</a></span></p>
         <!--<p><span>Thank you for using this app. You can reach me by using this <a href="https://form.jotform.com/241158550080854" target="_blank">feedback form</a>.</span></p>-->
-        <p>Bookmark this app: <a href="https://bit.ly/mlcalculator">Mobile Legends Calculator</a> - <span class="small hint">v2.0.0</span></p>
+        <p>Bookmark this app: <a href="https://bit.ly/hokcalculator">Honor of Kings Calculator</a> - <span class="small hint">v1.0.0</span></p>
     </div>
 </body>
 <script src="index.js"></script>
